--- a/publication/index.html
+++ b/publication/index.html
@@ -42,8 +42,8 @@
   
 
   
-  <link rel="alternate" href="https://vpratibha.github.io/publication/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="https://vpratibha.github.io/publication/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="https://vpratibha.github.io/publication/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
+  <link rel="feed" href="https://vpratibha.github.io/publication/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -57,9 +57,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content=" Dr Pratibha Vellanki">
   <meta property="og:url" content="https://vpratibha.github.io/publication/">
-  <meta property="og:title" content="Publications | Academic">
+  <meta property="og:title" content="Publications |  Dr Pratibha Vellanki">
   <meta property="og:description" content="Professor of Artificial Intelligence">
   <meta property="og:locale" content="en-us">
   
@@ -68,7 +68,7 @@
 
   
 
-  <title>Publications | Academic</title>
+  <title>Publications |  Dr Pratibha Vellanki</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -87,7 +87,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"> Dr Pratibha Vellanki</a>
     </div>
 
     
@@ -399,7 +399,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Your Name &middot; 
+      &copy; 2017 Pratibha &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
