--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   
 
   
-  <link rel="alternate" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
+  <link rel="feed" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -64,9 +64,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content=" Dr Pratibha Vellanki">
   <meta property="og:url" content="https://vpratibha.github.io/">
-  <meta property="og:title" content="Academic">
+  <meta property="og:title" content=" Dr Pratibha Vellanki">
   <meta property="og:description" content="Professor of Artificial Intelligence">
   <meta property="og:locale" content="en-us">
   
@@ -75,7 +75,7 @@
 
   
 
-  <title>Academic</title>
+  <title> Dr Pratibha Vellanki</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#navbar-main" data-offset="71" >
@@ -94,7 +94,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"> Dr Pratibha Vellanki</a>
     </div>
 
     
@@ -1443,7 +1443,7 @@ url('https://vpratibha.github.io/img/headers/bubbles-wide.jpg');
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Your Name &middot; 
+      &copy; 2017 Pratibha &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
