--- a/project/example-external-project/index.html
+++ b/project/example-external-project/index.html
@@ -49,8 +49,8 @@
   
 
   
-  <link rel="alternate" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
+  <link rel="feed" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -64,9 +64,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content=" Dr Pratibha Vellanki">
   <meta property="og:url" content="https://vpratibha.github.io/project/example-external-project/">
-  <meta property="og:title" content="External Project | Academic">
+  <meta property="og:title" content="External Project |  Dr Pratibha Vellanki">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
   
@@ -77,7 +77,7 @@
 
   
 
-  <title>External Project | Academic</title>
+  <title>External Project |  Dr Pratibha Vellanki</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -96,7 +96,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"> Dr Pratibha Vellanki</a>
     </div>
 
     
@@ -408,7 +408,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Your Name &middot; 
+      &copy; 2017 Pratibha &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
