--- a/publication_types/1/index.html
+++ b/publication_types/1/index.html
@@ -51,8 +51,8 @@
   
 
   
-  <link rel="alternate" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title="Academic">
-  <link rel="feed" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title="Academic">
+  <link rel="alternate" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
+  <link rel="feed" href="https://vpratibha.github.io/index.xml" type="application/rss+xml" title=" Dr Pratibha Vellanki">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -66,9 +66,9 @@
   <meta property="twitter:site" content="@GeorgeCushen">
   <meta property="twitter:creator" content="@GeorgeCushen">
   
-  <meta property="og:site_name" content="Academic">
+  <meta property="og:site_name" content=" Dr Pratibha Vellanki">
   <meta property="og:url" content="https://vpratibha.github.io/publication_types/1/">
-  <meta property="og:title" content="1 | Academic">
+  <meta property="og:title" content="1 |  Dr Pratibha Vellanki">
   <meta property="og:description" content="Professor of Artificial Intelligence">
   <meta property="og:locale" content="en-us">
   
@@ -77,7 +77,7 @@
 
   
 
-  <title>1 | Academic</title>
+  <title>1 |  Dr Pratibha Vellanki</title>
 
 </head>
 <body id="top" data-spy="scroll" data-target="#toc" data-offset="71" >
@@ -96,7 +96,7 @@
         <span class="icon-bar"></span>
       </button>
       
-      <a class="navbar-brand" href="/">Academic</a>
+      <a class="navbar-brand" href="/"> Dr Pratibha Vellanki</a>
     </div>
 
     
@@ -245,7 +245,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2017 Your Name &middot; 
+      &copy; 2017 Pratibha &middot; 
 
       Powered by the
       <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
