--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@ background-color: #666;
 
 <h1 id="biography">Biography</h1>
 
-<p>Pratibha Vellanki is a research fellow at the Center for Pattern Recognition and Data Analytics (PRaDA), Deakin University. She has experience in investigating applied machine learning problems in problems related to autism and cerebral palsy. Her PhD thesis was on identifying clusters of children with autism who can prospectively be administered personalised intervention.
-Currently she is working on optimisation of industrial processes, especially when relationship between the variables and the outcomes is unknown and is expensive to evaluate. At PRaDA she is currently working accross discplines with material scientists to help accelerate the alloy design process and fibre design process, using Bayesian optimisation.</p>
+<p>Pratibha Vellanki is a research fellow at the Center for Pattern Recognition and Data Analytics (PRaDA), Deakin University. She has experience in investigating applied machine learning problems in problems related to autism and cerebral palsy. Her PhD thesis was on identifying clusters of children with autism who can prospectively be administered personalised intervention.</p>
+
+<p>Currently she is working on optimisation of industrial processes, especially when relationship between the variables and the outcomes is unknown and is expensive to evaluate. At PRaDA she is currently working accross discplines with material scientists to help accelerate the alloy design process and fibre design process, using Bayesian optimisation.</p>
 
 
     <div class="row">
